[package]
name = "linefreq"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Count the frequency of each line in stdin"
homepage = "https://github.com/kantord/linefreq"
documentation = "https://github.com/kantord/linefreq"
repository = "https://github.com/kantord/linefreq"
readme = "README.md"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
